--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "description": "download created images"
   },
   "name": "splash-native"
 }
