--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "dom-to-image": "^2.6.0",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "file-saver": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -18,6 +20,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "0.14.10",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
